# dropset-gamma

./: .gitignore  Anchor.toml  Cargo.toml  Makefile
.claude/skills/init-pr/: SKILL.md
.claude/skills/pr-title-description/: SKILL.md
.github/actions/install-anchor-v2/: action.yml
.github/workflows/: lint.yml  test.yml
cfg/: cspell.yml  dictionary.txt  markdownlint.yml  pre-commit-lint.yml  yamllint.yml
docs/: architecture.md
frontend/: .env.example  .gitignore  biome.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/currencies/: page.tsx
frontend/app/swap/: page.tsx
frontend/components/: CopyButton.tsx  CurrenciesView.tsx  CurrencySelector.tsx  Footer.tsx  GlobePanel.tsx  Header.tsx  Icons.tsx  MaxSlippageButton.tsx  PersistedGlobe.tsx  ShortcutsHelp.tsx  StablecoinSelector.tsx  SwapArrowButton.tsx  SwapPanel.tsx  TermsOfUseGate.tsx  TokenInfoLink.tsx  TokenMintActions.tsx  TokenPicker.tsx  TokenRow.tsx  UrlSync.tsx  WalletButton.tsx  WalletPickerDialog.tsx  icons.tsx
frontend/lib/: countries.ts  currencies.json  currencies.ts  env.ts  events.ts  explorer.ts  providers.tsx  shortcuts.ts  store.ts  world-polygons.ts
program/: Anchor.toml  Cargo.toml
program/src/: errors.rs  lib.rs  state.rs
program/src/instructions/: init.rs
program/tests/: init.rs
program/tests/common/: mod.rs
