[workspace]
members = ["program"]
resolver = "2"

[workspace.dependencies]
solana-program-log = {version = "1.1", features = ["macro"]}
wincode = {version = "0.5", features = ["derive"]}
litesvm = "0.11"

[workspace.dependencies.anchor-v2-testing]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"

[workspace.dependencies.anchor-lang-v2]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"
