[workspace]
members = ["program"]
resolver = "2"

[workspace.dependencies]
litesvm = "0.11"
solana-instruction = "3.0"
solana-keypair = "3.0.1"
solana-loader-v3-interface = {version = "6", features = ["bincode"]}
solana-native-token = "3"
solana-program-log = {version = "1.1", features = ["macro"]}
solana-pubkey = {version = "4.1", features = ["curve25519"]}
solana-sdk-ids = "3"
wincode = {version = "0.5", features = ["derive"]}

[workspace.dependencies.anchor-lang-v2]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"

[workspace.dependencies.anchor-v2-testing]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"

[profile.release]
overflow-checks = true