# cspell:word cdylib

[dependencies]
anchor-lang-v2.workspace = true
solana-program-log.workspace = true
wincode.workspace = true

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang-v2/idl-build"]
no-entrypoint = []
no-log-ix-name = []

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust.unexpected_cfgs]
check-cfg = ['cfg(target_os, values("solana"))']
level = "warn"

[package]
edition = "2021"
name = "dropset-gamma"
publish = false
version = "0.1.0"

[profile.release]
overflow-checks = true