# cspell:word cdylib

[dependencies]
anchor-lang-v2.workspace = true
solana-program-log.workspace = true
solana-sdk-ids.workspace = true
wincode.workspace = true

[dev-dependencies]
anchor-v2-testing.workspace = true
solana-instruction.workspace = true
solana-keypair.workspace = true
solana-loader-v3-interface.workspace = true
solana-native-token.workspace = true
solana-pubkey.workspace = true

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang-v2/idl-build"]
no-entrypoint = []
no-log-ix-name = []
profile = ["anchor-v2-testing/profile"]

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust.unexpected_cfgs]
check-cfg = ['cfg(target_os, values("solana"))']
level = "warn"

[package]
edition = "2021"
name = "dropset-gamma"
publish = false
version = "0.1.0"
